<resources>
    <string name="app_name">微聊</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--Login 登录-->
    <string name="login_user">登录账号</string>
    <string name="login">登录</string>
    <string name="input_account">请输入用户名</string>
    <string name="input_psw">请输入密码</string>
    <string name="no_login">无法登录？</string>
    <!-- 清空 内容button-->
    <dimen name="clear_icon_small">26dp</dimen>

    <!--Register 注册-->
    <string name="register_user">注册账号</string>
    <string name="input_next_psw">请输入重复密码</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_sex">请输入性别</string>
    <string name="input_birthday">请输入出生日期</string>
    <string name="input_sign">请输入签名</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="remind">注意：账号必须是非0开头的8位数字</string>
    <string name="no_null_account">账号不能为空</string>
    <string name="no_null_pass">密码不能为空</string>
    <string name="no_null_repass">重复密码不能为空</string>
    <string name="no_null_name">昵称不能为空</string>
    <string name="no_null_sex">性别不能为空</string>
    <string name="no_null_birthday">生日不能为空</string>
    <string name="no_null_sign">个性签名不能为空</string>
    <string name="no_0">第一位不能为0</string>
    <string name="remind_8">请输入8位数字</string>
    <string name="no_same_pass">两次输入密码不一致！</string>
    <string name="upload_img">请上传图片</string>
    <string name="user_info">用户信息</string>
    <!--Detail  详情信息-->
    <string name="detail">详情信息</string>
    <string name="account_info">账号信息</string>
    <!--修改密码-->
    <string name="input_old_pass">请输入旧密码</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="show_pass">显示密码</string>
    <!--Pubic  公用-->
    <string name="send">发送</string>
    <string name="new_user">新用户</string>
    <string name="del">删除</string>
    <string name="upd">修改</string>


    <string name="open">Open</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>
    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>
    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">Ok</string>
    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>
    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>
    <string name="loading">Loading</string>
    <string name="newTag">New!</string>
    <string name="discard">Discard</string>


    <!--MenuFragment 左侧边栏-->
    <string name="Personalized_signature">个性签名</string>
    <string name="my_album">我的相册</string>
    <string name="my_wallet">我的钱包</string>
    <string name="exchange_skin">切换皮肤</string>
    <string name="my_expression">我的表情</string>
    <string name="my_game">娱乐游戏</string>
    <string name="common_about">关于</string>
    <string name="common_exit">退出登录</string>
    <string name="common_exit_app">再按一次退出程序</string>

    <string name="message">消息</string>
    <string name="addressBook">通讯录</string>
    <string name="setting">设置</string>
    <string name="account_manage">账号管理</string>
    <!--UserInfo 用户个人信息-->
    <string name="perinfo_title">个人信息</string>
    <string name="user_head_image">头像</string>
    <string name="user_name">昵称</string>
    <string name="user_id">ID&#160;&#160;&#160;&#160;&#160;</string>
    <string name="user_account">账号</string>
    <string name="user_sex">性   别</string>
    <string name="user_age">年龄</string>
    <string name="user_birthday">出生日期</string>
    <string name="user_sign">个性签名</string>
    <!--message remind  消息提醒-->
    <string name="message_remind">消息提醒</string>
    <string name="message_notice">接受消息通知</string>
    <string name="message_sound">声音</string>
    <string name="message_vibration">振动</string>
    <!--nodistrub -->
    <string name="nodistrub">勿扰模式</string>
    <string name="nodistrub_content">开启后，在设定时间段内收到新消息时不会响铃或振动</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <!--privateandsafe-->
    <string name="privateandsafe">隐私与安全</string>
    <string name="add_check">加我为朋友需验证</string>
    <!--手势锁-->
    <string name="gesture_lock">手势锁</string>
    <string name="set_lock">设置手势锁</string>
    <string name="before_set_pass">请先设置密码</string>
    <string name="first_set_pass">第一次设置密码</string>
    <string name="again_input_pass">请再次输入密码</string>
    <string name="input_new_pass_remind">密码设置成功，请输入新密码</string>
    <string name="set_pass_lose">密码设置失败</string>
    <string name="pass_error">密码错误</string>
    <string name="change_pass">修改密码</string>
    <string name="reset_lock">重置手势锁</string>
    <string name="reset_check">重置密码，请输入密码校验</string>
    <string name="reset_success">密码重置成功，请设置新密码</string>
    <string name="reset_lose">密码不正确，重置失败</string>
    <!--normaiSetting-->
    <string name="normalsetting">通用设置</string>
    <string name="cross_screen">开启横屏</string>
    <string name="setting_textsize">设置字体大小</string>
    <string name="shoot">拍摄</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="statisticalflow">流量统计</string>
    <!-- 通用 Dialog-->
    <string name="common_reminder">提示</string>
    <string name="exit_login_content">您确定退出登录</string>
    <string name="submint_exit">确定退出</string>
    <string name="common_cancel">取消</string>
    <string name="common_close">关闭</string>
    <string name="common_yes">确定</string>
    <!-- 性别选择器 Dialog-->
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <!-- 游戏-->
    <string name="geme">游戏</string>
    <string name="luackyPan">幸运转盘</string>
    <string name="GBA">积分</string>
    <string name="prize">奖品</string>
    <string name="thank">谢谢参与</string>
    <string name="GBA5">5点积分</string>
    <string name="GBA10">10点积分</string>
    <string name="GBA50">50点积分</string>
    <string name="schoolbag">儿童书包一个</string>
    <string name="earphone">耳机</string>
    <string name="ipad">iPad</string>
    <string name="very_thank">非常感谢你的参与！</string>
    <string name="rule_gba">积分规则</string>
    <string name="rule_gba_content">1、在本软件消费可以获得积分。2、新用户免费拥有一次抽奖机会。3、积分每年最后一天清空。
    </string>
    <string name="rule_draw">抽奖规则</string>
    <string name="rule_draw_content">1、每次消耗30积分获得一次抽奖机会；</string>
    <string name="Wuziqi">五子棋</string>
    <string name="rule_game">游戏规则</string>
    <string name="rule_game_content">1.棋盘
五子棋专用棋盘为 15×15,盘面有纵横各十五条等距离垂直交叉的平行线构成,共225个交叉点。盘面正中一点为"天元"。
2.行棋顺序
黑先(Start)、白后,从天元(h8)开始相互顺序落子。黑方的第一个棋子应下在天元上,白方第一个棋子只能下在与天元为中心邻近的八个点上,黑方第二个棋子只能下在与天元为中心邻近5×5点上,白棋第二个棋子不受限制,可下在棋盘任意位置。
3.判断胜负
最先在棋盘横向、竖向、斜向形成连续的相同色五个棋子的一方为胜。</string>

    <string name="game2048">2048</string>
    <string name="game_introduce">玩法介绍</string>
    <string name="game_skill">玩法技巧</string>
    <string name="game2048_content">每次可以选择上下左右其中一个方向去滑动，每滑动一次，所有的数字方块都会往滑动的方向靠拢外，系统也会在空白的地方乱数出现一个数字方块，相同数字的方块在靠拢、相撞时会相加。不断的叠加最终拼凑出2048这个数字就算成功。</string>
    <string name="game2048_skill">1、最大数尽可能放在角落。
　　2、数字按顺序紧邻排列。
　　3、首先满足最大数和次大数在的那一列/行是满的。
　　4、时刻注意活动较大数（32以上）旁边要有相近的数。
　　5、以大数所在的一行为主要移动方向
　　6、不要急于“清理桌面”。</string>
    <!--关于-->
    <string name="string_about">关于微聊</string>
    <string name="string_connection">联系</string>
    <string name="string_about_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;动态心电图仪工作站是一款方便医生对心电采集患者进行管理的软件，医生可以在软件中针对患者进行设备绑定、设备状态管理、采集时长管理等操作，方便医生对多台设备多个患者同时管理，软件操作界面简洁明了，大大提升医生的工作效率。</string>
    <string name="setting_about_test_version">检测新版本</string>
    <string name="setting_about_newapk">您使用的为最新版本</string>
    <string name="setting_about_connectnet">请连接网络后进行检测</string>
    <!-- 单位 -->
    <string name="common_time">时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="common_future_time">不能选择将来的时间,请重新选择</string>
    <string name="common_first_dot">首位不能为小数点</string>

    <string name="common_message">消息</string>
    <!-- MCAlertDialog -->
    <string name="mc_dialog_tip1">输出的</string>
    <string name="mc_dialog_tip2">数字有误，范围在0-</string>
    <string name="not_saved_prompt">信息未保存，确认放弃？</string>

    <string name="img_select">头像选择</string>
</resources>
