<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <View style="@style/style_listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/txt_switchbutton"
                android:text="@string/cross_screen" />

            <com.mychat.view.MyToggleButton
                style="@style/style_height_match"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/style_listDivider" />

    <TextView
        style="@style/txt_normal"
        android:background="@color/white"
        android:text="@string/setting_textsize" />

    <View style="@style/style_listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center|left"
        android:paddingLeft="16dp"
        android:text="@string/shoot"
        android:textSize="@dimen/size20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <View style="@style/style_listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/txt_switchbutton"
                android:text="@string/photo" />

            <com.mychat.view.MyToggleButton
                style="@style/style_height_match"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/style_listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/txt_switchbutton"
            android:text="@string/video" />

        <com.mychat.view.MyToggleButton
            style="@style/style_height_match"
            android:layout_gravity="center" />
    </LinearLayout>

    <View style="@style/style_listDivider" />

</LinearLayout>