<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View style="@style/style_listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white">
            <TextView
                style="@style/txt_switchbutton"
                android:text="@string/add_check"/>
            <com.example.practice.view.MyToggleButton
                style="@style/style_height_match"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/style_listDivider" />
    <TextView
        android:background="@color/white"
        style="@style/txt_normal"
        android:text="@string/gesture_lock"/>
    <View style="@style/style_listDivider" />

    <TextView
        android:background="@color/white"
        style="@style/txt_normal"
        android:text="@string/change_pass"/>
    <View style="@style/style_listDivider" />

</LinearLayout>