<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View style="@style/style_listDivider" />
        <LinearLayout
            style="@style/style_width_match"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:padding="16dp"
                style="@style/txt_user_info"
                android:text="@string/user_head_image"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/user_headimage"
                android:layout_width="@dimen/icon_big"
                android:layout_height="@dimen/icon_big"
                android:layout_margin="@dimen/margin_boundary"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon"
                app:riv_oval="true"
                />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/style_listDivider" />
    <LinearLayout
        style="@style/style_width_match"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="16dp"
            style="@style/txt_user_info"
            android:text="@string/user_name"
            />
        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            />
    </LinearLayout>
    <View style="@style/style_listDivider" />
    <View style="@style/style_listDivider" />

    <LinearLayout
        style="@style/style_width_match"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/txt_user_info"
            android:padding="16dp"
            android:text="@string/user_account" />

        <TextView
            android:id="@+id/user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View style="@style/style_listDivider" />
    <LinearLayout
        style="@style/style_width_match"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="16dp"
            style="@style/txt_user_info"
            android:text="@string/user_sex"
            />
        <TextView
            android:id="@+id/user_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <View style="@style/style_listDivider" />

    <LinearLayout
        style="@style/style_width_match"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="16dp"
            style="@style/txt_user_info"
            android:text="@string/user_age"
            />
        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <View style="@style/style_listDivider" />


    <LinearLayout
        style="@style/style_width_match"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/txt_user_info"
            android:padding="16dp"
            android:text="@string/user_birthday" />

        <TextView
            android:id="@+id/user_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <View style="@style/style_listDivider" />

    <LinearLayout
        style="@style/style_width_match"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="16dp"
            style="@style/txt_user_info"
            android:text="@string/user_sign"
            />
        <EditText
            android:id="@+id/edit_user_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"/>
            />
    </LinearLayout>
    <View style="@style/style_listDivider" />

</LinearLayout>